--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@ window.onload = function() {
 	var cols = 10; //actually rows, sorry! Will be removed when map is implemented.
 	var rows = 3; //actually columns, sorry! Will be removed when map is implemented.
 	var score = 10;
-	var mapid = "AU:SA";
+	var mapid = "JP";
 	fetch('maps.txt')
 		.then(response => response.text())
-		.then(text => console.log(text))
+	var textByLine = text.split("\n");
+	console.log(textByLine);
 	var canvas = document.getElementById("minesweeper");
 	canvas.width = 24+16*rows;
 	canvas.height = 66+16*cols;
