--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ window.onload = function() {
 	// Getting maps.txt
 	let response = fetch('maps.txt');
 	if (response.ok) {
-		let txt = response.text();
+		var txt = response.text();
+		var textByLine = txt.split("\n");
 	}
-	var textByLine = txt.split("\n");
 	for (let i = 0; i < textByLine.length; i++) {
 		if (textByLine[i].split(",").length > 2) {
 			console.log(textByLine[i]);
