--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ window.onload = function() {
 	var mapid = "JP";
 	// Getting maps.txt
 	let response = fetch('maps.txt');
-	var txt = response.text();
+	var txt = await response.text();
 	var textByLine = txt.split("\n");
 	for (let i = 0; i < textByLine.length; i++) {
 		if (textByLine[i].split(",").length > 2) {
