--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ window.onload = function() {
 	var score = 10;
 	var mapid = "JP";
 	// Getting maps.txt
-	let response = fetch('maps.txt');
+	let response = await fetch('maps.txt');
 	var txt = await response.text();
 	var textByLine = txt.split("\n");
 	for (let i = 0; i < textByLine.length; i++) {
