--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Testing the Minesweeper Canvas</title>
+<script src='maps.js'></script> <!-- This is a bit cheaty; it's the maps file that contains a string. -->
 </head>
 <body>
 <p>Canvas below:</p>
@@ -10,31 +11,40 @@
 <script>
 window.onload = function() {
 	// Values which will be replaced by a form or something and are here for testing
-	var cols = 10;
+	var cols = 3;
 	var rows = 3;
 	var score = 10;
-	var mapid = "JP";
-	// Getting maps.txt
-	async function fetchMaps(){
-		try {
-			const response = await fetch('maps.txt');
-			const data = await response.text();
-			return data;
-		} catch (err) {
-			console.error(err);
-		}
-	}
-	txt = fetchMaps();
+	var mapID = "JP";
+	var lat = "0";
+	var lon = "0";
+	var justSubRegion = true;
+	// Getting the correct map from maps.js
+	var map = "o";
 	console.log(txt);
-	/*let response = await fetch('maps.txt');
-	var txt = await response.text();
-	var textByLine = txt.split("\n");
+	var textByLine = txt.split("\n"); //txt is the contents of maps.js... technically.
 	for (let i = 0; i < textByLine.length; i++) {
-		if (textByLine[i].split(",").length > 2) {
-			console.log(textByLine[i]);
+		if (textByLine[i].split(";").length > 2) {
+			let info = textByLine[i].split(";").slice(0,-1)
+			if (mapID.split(":").length === 1) { // is top level region
+				if (mapID === info[0] || mapID === info[1]){ // is valid
+					cols = info[2]-info[3]+3;
+					rows = info[5]-info[4]+3;
+					map = "e";
+				}
+			} else if (info.length === 7) { // is subregion
+				if (mapID.split(":")[1] === info[2].split(":")[0] && mapID.split(":")[0] === info[2].split(":")[1]) {
+					if (justSubRegion) {
+						cols = info[3]-info[4]+3;
+						rows = info[6]-info[5]+3;
+						map = "e";
+					}
+				}
+			}
 		}
 	}
-	console.log(textByLine);*/
+	if (map === "o"){
+		alert("The region code is incorrect.");
+	}
 	// Sorting out the canvas
 	var canvas = document.getElementById("minesweeper");
 	canvas.width = 24+16*rows;
