Renamed maps.js to maps.txt
So that GitHub doesn't think that I have a massive maps file when I'm done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Testing the Minesweeper Canvas</title>
-<script src='maps.js'></script> <!-- This is a bit cheaty; it's the maps file that contains a string. -->
+<script src='maps.txt'></script> <!-- This is a bit cheaty; it's the maps file that contains a string. -->
 </head>
 <body>
 <p>Canvas below:</p>
