--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Testing the Minesweeper Canvas</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <script src='maps.txt'></script> <!-- This is a bit cheaty; it's the maps file that contains a string. -->
 </head>
 <body>
@@ -9,46 +10,96 @@
 <canvas id="minesweeper" width="650" height="650">Your browser doesn't support the &lt;canvas&gt; element</canvas> <!-- style="border:1px solid #000000;" -->
 <!-- JavaScript below -->
 <script>
-window.onload = function() {
-	// Values which will be replaced by a form or something and are here for testing
-	var cols = 3;
-	var rows = 3;
-	var score = 10;
-	var mapID = "JP";
-	var lat = "0";
-	var lon = "0";
-	var justSubRegion = true;
-	// Getting the correct map from maps.js
-	var map = "o";
-	console.log(txt);
-	var textByLine = txt.split("\n"); //txt is the contents of maps.js... technically.
-	for (let i = 0; i < textByLine.length; i++) {
-		if (textByLine[i].split(";").length > 2) {
-			let info = textByLine[i].split(";").slice(0,-1)
-			if (mapID.split(":").length === 1) { // is top level region
-				if (mapID === info[0] || mapID === info[1]){ // is valid
-					cols = info[2]-info[3]+3;
-					rows = info[5]-info[4]+3;
+// Values which will be replaced by a form or something and are here for testing
+var cols = 3;
+var rows = 3;
+var score = 10;
+var mapID = "JP";
+var lat = "0";
+var lon = "0";
+// Getting the correct map from maps.txt
+var map = ["","","0","2","0","2","\nooo\nooo\nooo"];
+var yes = false;
+console.log(txt);
+var textByTR = txt.split(/;\n[^;o0#]/); //txt is the contents of maps.txt... technically.
+totalLines = 1;
+for (let i = 1; i < textByTR.length; i++) {
+	textByTR[i] = txt.split("\n")[totalLines].charAt(0) + textByTR[i];
+	totalLines += textByTR[i].split("\n").length;
+}
+textByTR = textByTR.slice(1)
+var textBySub = [];
+for (let i = 0; i < textByTR.length; i++) {
+	textBySub.push(textByTR[i].split(";\n;"));
+}
+textBySub = textBySub.slice(0,-1);
+var mapList = [];
+for (let i = 0; i < textBySub.length; i++) {
+	let ml = [];
+	for (let j = 0; j < textBySub[i].length; j++) {
+		ml.push(textBySub[i][j].split(";"));
+	}
+	mapList.push(ml);
+}
+console.log(mapList);
+
+/*for (let i = 0; i < textByLine.length; i++) {
+	if (textByLine[i].split(";").length > 2) {
+		let info = textByLine[i].split(";").slice(0,-1);
+		if (mapID.split(":").length === 1) { // is top level region
+			if (mapID === info[0] || mapID === info[1]){ // is valid
+				cols = info[2]-info[3]+3;
+				rows = info[5]-info[4]+3;
+				console.log(textByLine.slice(i+1));
+				map = "e";
+			}
+		} else if (info.length === 7) { // is subregion
+			console.log(info[1]);
+			if (mapID === info[1]) {
+				yes = true;
+			} else if (mapID.split(":")[1] === info[2].split(":")[0] && mapID.split(":")[0] === info[2].split(":")[1]) {
+				yes = true;
+			}
+			if (yes) {
+				if (justSubRegion) {
+					cols = info[3]-info[4]+3;
+					rows = info[6]-info[5]+3;
+					console.log(textByLine.slice(i));
 					map = "e";
-				}
-			} else if (info.length === 7) { // is subregion
-				if (mapID.split(":")[1] === info[2].split(":")[0] && mapID.split(":")[0] === info[2].split(":")[1]) {
-					if (justSubRegion) {
-						cols = info[3]-info[4]+3;
-						rows = info[6]-info[5]+3;
-						map = "e";
-					}
+					console.log(info[1]);
 				}
 			}
 		}
 	}
-	if (map === "o"){
+}*/
+window.onload = function() {
+	// Finding which map it is and behaving accordingly
+	if (mapID.split(":").length > 1) {
+		for (let i = 0; i < mapList.length; i++) {
+			for (let j = 1; j < mapList[i].length; j++) {
+				if (mapList[i][0][0]+":"+mapList[i][j][0] === mapID || mapList[i][0][1]+":"+(mapList[i][j][1].split(":")[0]) === mapID) {
+					map = mapList[i][j];
+				}
+			}
+		}
+	} else {
+		for (let i = 0; i < mapList.length; i++) {
+			if (mapList[i][0][0] === mapID || mapList[i][0][1] === mapID) {
+				map = mapList[i][0]
+			}
+		}
+	}
+	console.log(map)
+	var rowMap = map[6].split("\n").slice(1)
+	rows = rowMap.length;
+	cols = rowMap[0].length
+	if (map[6] === "\nooo\nooo\nooo"){
 		alert("The region code is incorrect.");
 	}
 	// Sorting out the canvas
 	var canvas = document.getElementById("minesweeper");
-	canvas.width = 24+16*rows;
-	canvas.height = 66+16*cols;
+	canvas.width = 24+16*cols;
+	canvas.height = 66+16*rows;
 	var ctx = canvas.getContext("2d");
 	ctx.fillStyle = "#C0C0C0"
 	ctx.fillRect(0, 0, canvas.width, canvas.height);
@@ -60,24 +111,28 @@ window.onload = function() {
 	
 	// Drawing stuff to the canvas
 	draw("tl",0,0);
-	draw("tr",13+16*rows,0);
-	draw("bl",0,55+16*cols);
-	draw("br",13+16*rows,55+16*cols);
-	for (let i = 0; i < rows; i++) {
+	draw("tr",13+16*cols,0);
+	draw("bl",0,55+16*rows);
+	draw("br",13+16*cols,55+16*rows);
+	for (let i = 0; i < cols; i++) {
 		draw("t", 13+16*i, 0);
 		draw("m", 13+16*i, 44);
-		draw("b", 13+16*i, 55+16*cols);
+		draw("b", 13+16*i, 55+16*rows);
 	}
-	for (let i = 0; i < cols; i++) {
+	for (let i = 0; i < rows; i++) {
 		draw("l", 0, 55+16*i);
-		draw("r", 13+16*rows, 55+16*i);
+		draw("r", 13+16*cols, 55+16*i);
 	}
-	for (let col = 0; col < cols; col++) {
-		for (let row = 0; row < rows; row++) {
-			draw("unpressed",13+16*row,55+16*col);
+	for (let row = 0; row < rows; row++) {
+		for (let col = 0; col < cols; col++) {
+			if (rowMap[row][col] === "0" || rowMap[row][col] === "#") {
+				draw("pressed",13+16*col,55+16*row);
+			} else {
+				draw("unpressed",13+16*col,55+16*row);
+			}
 		}
 	}
-	draw("smile",((24+16*rows)/2)-13,15);
+	draw("smile",((24+16*cols)/2)-13,15);
 };
 </script>
 </body>
