--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src='maps.txt'></script> <!-- This is a bit cheaty; it's the maps file that contains a string. -->
 </head>
 <body>
-<p id="about">Canvas below:</p>
+<div id="about">Your browser does not support Javascript.</div>
 <canvas id="minesweeper" width="650" height="650">Your browser doesn't support the &lt;canvas&gt; element</canvas> <!-- style="border:1px solid #000000;" -->
 <!-- JavaScript below -->
 <script src='minesweeper.js'></script>
