--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <title>Testing the Minesweeper Canvas</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <script src='maps.txt'></script> <!-- This is a bit cheaty; it's the maps file that contains a string. -->
+<script src='minesweeper.js'></script> <!-- This is the brains of the entire thing -->
 </head>
 <body>
 <div id="about">Your browser does not support Javascript.</div>
 <canvas id="minesweeper" width="650" height="650">Your browser doesn't support the &lt;canvas&gt; element</canvas> <!-- style="border:1px solid #000000;" -->
-<!-- JavaScript below -->
-<script src='minesweeper.js'></script>
 </body>
 </html>
