Rename the id of the div
From "about" to "pre-canvas"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <script src='minesweeper.js'></script> <!-- This is the brains of the entire thing -->
 </head>
 <body>
-<div id="about">Your browser does not support Javascript.</div>
+<noscript>Your browser doesn't support JavaScript.</noscript>
+<div id="pre-canvas"></div>
 <canvas id="minesweeper" width="650" height="650">Your browser doesn't support the &lt;canvas&gt; element</canvas> <!-- style="border:1px solid #000000;" -->
 </body>
 </html>
