--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Testing the Minesweeper Canvas</title>
+<title>XXOs' Recreated Regiohashing Tool</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <script src='maps.txt'></script> <!-- This is a bit cheaty; it's the maps file that contains a string. -->
 <script src='minesweeper.js'></script> <!-- This is the brains of the entire thing -->
