--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <noscript>Your browser doesn't support JavaScript.</noscript>
 <div id="pre-canvas"></div>
 <canvas id="minesweeper" width="650" height="650">Your browser doesn't support the &lt;canvas&gt; element</canvas> <!-- style="border:1px solid #000000;" -->
+<div id="post-canvas"></div>
 </body>
 </html>
